--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -25,20 +25,27 @@
         android:text="@string/initialStatusDescr"
         android:textSize="18sp" />
 
-    <ProgressBar
-        android:id="@+id/progrCircle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="gone" />
-
-    <kwarc.com.mathwebsearch.RefreshableWebView
-        android:id="@+id/results_webvw"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/statusDescr"
-        android:layout_marginTop="20dp"
-        android:padding="10dip"
-        android:visibility="gone" />
+        android:layout_centerInParent="true"
+        android:foregroundGravity="center">
 
+        <kwarc.com.mathwebsearch.RefreshableWebView
+            android:id="@+id/results_webvw"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="20dp"
+            android:padding="10dip"
+            android:visibility="gone" />
+
+        <ProgressBar
+            android:id="@+id/progrCircle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:padding="20dip"
+            android:visibility="gone" />
+    </FrameLayout>
 </RelativeLayout>
