--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,44 +8,28 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.kwarc.mathwebsearch.ResultsActivity">
 
-    <ImageView
-        android:id="@+id/statusColor"
-        android:layout_width="20dp"
-        android:layout_height="40dp"
-        android:background="@color/red"
-        android:contentDescription="@string/acc_status" />
+    <com.kwarc.mathwebsearch.RefreshableWebView
+        android:id="@+id/results_webvw"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone" />
+
+    <ProgressBar
+        android:id="@+id/progrCircle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:padding="20dip"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/statusDescr"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginLeft="7dp"
-        android:layout_toRightOf="@id/statusColor"
-        android:gravity="center"
-        android:text="@string/initialStatusDescr"
-        android:textSize="18sp" />
-
-    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/statusDescr"
-        android:layout_centerInParent="true"
-        android:foregroundGravity="center">
-
-        <com.kwarc.mathwebsearch.RefreshableWebView
-            android:id="@+id/results_webvw"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
-            android:padding="10dip"
-            android:visibility="gone" />
-
-        <ProgressBar
-            android:id="@+id/progrCircle"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:padding="20dip"
-            android:visibility="gone" />
-    </FrameLayout>
-</RelativeLayout>
+        android:layout_height="wrap_content"
+        android:background="@color/transparent_gray"
+        android:gravity="center"
+        android:padding="5dip"
+        android:text="@string/initialStatusDescr"
+        android:textColor="@color/red"
+        android:textSize="18sp" />
+</FrameLayout>
