--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="red">#ffff0000</color>
     <color name="yellow">#ffffff00</color>
     <color name="green">#ff00ff00</color>
+    <color name="transparent_gray">#af726864</color>
 </resources>
+
